--- a/torch/CMakeLists.txt
+++ b/torch/CMakeLists.txt
@@ -150,7 +150,7 @@ set(TORCH_PYTHON_LINK_FLAGS "")
 
 if (MSVC)
     string(APPEND TORCH_PYTHON_LINK_FLAGS " /NODEFAULTLIB:LIBCMT.LIB")
-    list(APPEND TORCH_PYTHON_LINK_LIBRARIES ${PYTHON_LIBRARIES})
+    list(APPEND TORCH_PYTHON_LINK_LIBRARIES ${PYTHON_DEBUG_LIBRARIES})
     if (NOT ${CMAKE_BUILD_TYPE} MATCHES "Release")
       string(APPEND TORCH_PYTHON_LINK_FLAGS " /DEBUG:FULL")
     endif()
@@ -383,3 +383,6 @@ if (NOT TORCH_PYTHON_LINK_FLAGS STREQUAL "")
 endif()
 
 install(TARGETS torch_python DESTINATION "${TORCH_INSTALL_LIB_DIR}")
+if (MSVC)
+  install(FILES $<TARGET_PDB_FILE:torch_python> DESTINATION "${TORCH_INSTALL_LIB_DIR}" OPTIONAL)
+endif()
