Keep run-time compiler options consistent

--- a/torch/CMakeLists.txt
+++ b/torch/CMakeLists.txt
@@ -154,6 +154,12 @@ if (MSVC)
     if (NOT ${CMAKE_BUILD_TYPE} MATCHES "Release")
       string(APPEND TORCH_PYTHON_LINK_FLAGS " /DEBUG:FULL")
     endif()
+    if (NOT ${CMAKE_BUILD_TYPE} MATCHES "Debug")
+      list(APPEND TORCH_PYTHON_COMPILE_OPTIONS /MD)
+    else()
+      list(APPEND TORCH_PYTHON_COMPILE_OPTIONS /MDd)
+    endif()
+  endif()
 elseif (APPLE)
     string(APPEND TORCH_PYTHON_LINK_FLAGS " -undefined dynamic_lookup")
 else()
